SERVER-83119 Qualify a ClusteredIndexscan as an allowed operation when notablescan is set.  (#17342)

GitOrigin-RevId: 0556bfee1e398617dca5703e8eb75487bef23f3e